src/test/ui/bad/bad-intrinsic-monomorphization.stderr
error[E0511]: invalid monomorphization of `cttz` intrinsic: expected basic integer type, found `Foo`
  --> $DIR/bad-intrinsic-monomorphization.rs:18:5
   |
LL |     intrinsics::cttz(v)
   |     ^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `fadd_fast` intrinsic: expected basic float type, found `Foo`
  --> $DIR/bad-intrinsic-monomorphization.rs:23:5
   |
LL |     intrinsics::fadd_fast(a, b)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0511]: invalid monomorphization of `simd_add` intrinsic: expected SIMD input type, found non-SIMD `Foo`
  --> $DIR/bad-intrinsic-monomorphization.rs:28:5
   |
LL |     simd_add(a, b)
   |     ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

